hello-world/example files/hello-svc-loadbalancer.yaml
kind: Service
apiVersion: v1
metadata:
  name: hello-world-svc
  namespace: hello-world
spec:
  selector:
    app: front 
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
  type: LoadBalancer
