hello-world/example files/hello-svc-nodeport.yaml
kind: Service
apiVersion: v1
metadata:
  name: hello-world-svc-nodeport
  namespace: hello-world
spec:
  selector:
    app: front 
  ports:
  - protocol: TCP
    port: 80
    nodePort: 30000
  type: NodePort
