hello-world/example files/hello-ingress-controler-http.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-controller-http
  namespace: hello-world
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: hello-world-ingress-controller.xbe-euw1-sb1.adeo.cloud
    http:
      paths:
      - path: /
        backend:
          serviceName: hello-world-deployment
          servicePort: 8080
  tls:
  - secretName: hello-certificate
    hosts:
    - hello-world-ingress-controller.xbe-euw1-sb1.adeo.cloud
